syntax = "proto3";

package server.response.types;

message server {
  uint32 id = 1;
  string name = 2;
  string serverToken = 3;
  string ip = 4;
  string logoUrl = 5;
  string pageUrl = 6;
  string successPaymentUrl = 7;
  string failPaymentUrl = 8;
  uint32 adminId = 9;
  uint32 maxPlans = 10;
  string createdAt = 11;
  string updatedAt = 12;
  string deletedAt = 13;
}

message getManyServers {
  repeated server servers = 1;
}
